--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head id="www-sitename-com" data-template-set="html5-reset">
 
 	<meta charset="utf-8">
-	<title>Angular.js : Advanced Design Patterns and Best Practices</title>
+	<title>Angular.js : Patrón de diseño avanzado y Buenas Prácticas</title>
 	
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, maximum-scale=.5">
